--- a/src/sass/global/_fonts.scss
+++ b/src/sass/global/_fonts.scss
@@ -2,38 +2,14 @@
 = Font Helper =
 ===============================================>>>>>*/
 
-$font-folder-path: "../../assets/fonts" !default;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=Lato');
-
-@font-face {
-    font-family: 'Karla';
-    src: url('#{$font-folder-path}/Karla-Bold.woff2') format('woff2'),
-        url('#{$font-folder-path}/Karla-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Karla';
-    src: url('#{$font-folder-path}/Karla-Italic.woff2') format('woff2'),
-        url('#{$font-folder-path}/Karla-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Karla';
-    src: url('#{$font-folder-path}/Karla-Regular.woff2') format('woff2'),
-        url('#{$font-folder-path}/Karla-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Karla';
-    src: url('#{$font-folder-path}/Karla-BoldItalic.woff2') format('woff2'),
-        url('#{$font-folder-path}/Karla-BoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-}
+// $font-folder-path: "../../assets/fonts" !default;
+//
+// @font-face {
+//     font-family: 'Karla';
+//     src: url('#{$font-folder-path}/Karla-Bold.woff2') format('woff2'),
+//         url('#{$font-folder-path}/Karla-Bold.woff') format('woff');
+//     font-weight: bold;
+//     font-style: normal;
+// }
