--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -4,7 +4,7 @@
 
 body {
   @include body-font();
-  color: $text-color;
+  color: $black;
   font-size: 16px;
   font-weight: $font-weight-regular;
   font-size-adjust: auto;
@@ -25,7 +25,7 @@ h4,
 h5,
 h6 {
   @include headings-font();
-  color: $text-color;
+  color: $black;
   line-height: 1.3em;
 }
 
