Added colours and typography styles

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -11,9 +11,9 @@ $text-color: #ffffff;
 /*=============================================>>>>>
 = Brand colours =
 ===============================================>>>>>*/
-$primary: #01a4b7;
-$secondary: #2b4b5a;
-$tertiary: #9fb3bc;
+$primary: #03A678;
+$secondary: #26C281;
+$tertiary: #E8F4EF;
 $highlight: #542537;
 $primary-darker: darken($primary, 5%);
 $secondary-darker: darken($secondary, 5%);
