--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -1,27 +1,67 @@
-.styled-button {
-  min-width: 250px;
-  border-radius: 36px;
-  background-color: transparent;
-  padding: 15px 35px;
-  border: 2px solid $white;
-  transition: color 0.3s ease, background-color 0.3s ease;
+button {
+  &:hover {
+    cursor: pointer;
+  }
+  &:focus, &:active {
+    outline: none;
+  }
+}
+
+.selection-button {
+  min-width: 225px;
+  position: relative;
+  z-index: 2;
 
   @include media-down(mobile) {
     min-width: 190px;
     padding: 8px 20px;
   }
 
+  span {
+    display: block;
+    background-color: $white;
+    padding: 10px 30px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: $tertiary;
+    border-radius: 24px;
+    transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+    @include h4();
+    position: relative;
+    transform: translateX(0) translateY(0);
+    transition: transform 0.3s ease;
+    z-index: 2;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $primary;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
   &:hover {
-    background-color: rgba($white, 0.1);
-    cursor: pointer;
+    span {
+      transform: translateX(-5px) translateY(-5px);
+      border-color: $primary;
+    }
   }
 
   &.active {
-    color: $black;
-    background-color: $white;
-  }
+    span {
+      transform: translateX(0) translateY(0);
+      border-color: $primary;
+    }
 
-  &:focus, &:active {
-    outline: none;
+    &:hover {
+      span {
+        transform: translateX(0) translateY(0);
+      }
+    }
   }
 }
