Huge progress with DonationModal

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -29,8 +29,8 @@ $border: #D8E5EE;
 $white: #ffffff;
 $black: #000000;
 $off-white: rgba(#BDC6D1, 0.35);
-$off-black: #1E1E1E;
-$off-black-lighter: #262626;
+$off-black: #4F4F4F;
+$grey: #D8D8D8;
 
 /*=============================================>>>>>
 = User noticiation colours =
