--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -5,6 +5,9 @@ button {
   &:focus, &:active {
     outline: none;
   }
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
 
 .selection-button {
@@ -62,6 +65,68 @@ button {
       span {
         transform: translateX(0) translateY(0);
       }
+    }
+  }
+}
+
+.cta-button {
+  min-width: 225px;
+  position: relative;
+  z-index: 2;
+
+  @include media-down(mobile) {
+    min-width: 190px;
+    padding: 8px 20px;
+  }
+
+  span {
+    display: block;
+    background-color: $secondary;
+    padding: 10px 30px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: $secondary;
+    border-radius: 24px;
+    transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+    @include h4();
+    color: $white;
+    position: relative;
+    transform: translateX(0) translateY(0);
+    transition: transform 0.3s ease;
+    z-index: 2;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $primary;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  &:hover {
+    span {
+      transform: translateX(-5px) translateY(-5px);
+      border-color: $secondary;
+    }
+  }
+
+  &:disabled {
+    span {
+      transform: translateX(0) translateY(0);
+      color: $grey;
+      border-color: $grey;
+      background-color: $white;
+    }
+  }
+
+  &:active {
+    span {
+      transform: translateX(0) translateY(0);
     }
   }
 }
