--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -2,6 +2,7 @@
   display: block;
   margin-right: 30px;
   opacity: 0;
+  transform: translateY(10%);
   transition-property: transform, opacity;
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
