--- a/src/components/Donations/Tiles.scss
+++ b/src/components/Donations/Tiles.scss
@@ -1,9 +1,10 @@
 .tiles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
-
-  &.active {
-
-  }
 }
