Progress on tile styling

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -1,14 +1,4 @@
 /*=============================================>>>>>
-= Grid =
-===============================================>>>>>*/
-$wrap-width: 1440px;
-
-/*=============================================>>>>>
-= Body font colour =
-===============================================>>>>>*/
-$text-color: #ffffff;
-
-/*=============================================>>>>>
 = Brand colours =
 ===============================================>>>>>*/
 $primary: #03A678;
@@ -28,7 +18,7 @@ $border: #D8E5EE;
 ===============================================>>>>>*/
 $white: #ffffff;
 $black: #000000;
-$off-white: rgba(#BDC6D1, 0.35);
+$off-white: #F7F9F8;
 $off-black: #4F4F4F;
 $grey: #D8D8D8;
 
