--- a/src/components/Donations/DonationIllustration.scss
+++ b/src/components/Donations/DonationIllustration.scss
@@ -1,24 +1,31 @@
 .donation-illustration {
-  display: block;
-
-  &.donation-illustration-small {
-    
-  }
-
-  &.donation-illustration-medium {
-
-  }
-
-  &.donation-illustration-large {
-
-  }
-
-  &.donation-illustration-variable {
-
-  }
+  flex: 1;
+  width: 100%;
+  padding-bottom: 110%;
+  position: relative;
 
   svg {
-    height: 100%;
     width: 100%;
+    height: auto;
+    position: absolute;
+    top: auto;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  // &.donation-illustration-small {}
+  //
+  // &.donation-illustration-medium {}
+  //
+  // &.donation-illustration-large {}
+
+  &.donation-illustration-variable {
+    svg {
+      top: 50%;
+      left: auto;
+      right: 0;
+      transform: translateY(-50%);
+    }
   }
 }
