--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -1,11 +1,17 @@
 .donation-tile {
-  display: block;
-  margin-right: 30px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-right: 50px;
   opacity: 0;
   transform: translateY(10%);
   transition-property: transform, opacity;
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
+  padding: 40px 20px;
+  background-color: $off-white;
+  border-radius: 24px;
+  position: relative;
 
   &:last-child {
     margin-right: 0;
@@ -16,8 +22,8 @@
     transform: translateY(0);
   }
 
-  &:not(.active) {
-    transition-delay: 0 !important;
+  .amount-container {
+    position: absolute;
   }
 
 }
