--- a/src/components/common/Wrapper.scss
+++ b/src/components/common/Wrapper.scss
@@ -1,3 +1,6 @@
+
+$wrap-width: 1240px;
+
 .wrapper {
   width: 100%;
   max-width: $wrap-width;
@@ -5,4 +8,18 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.half-wrap {
+  width: 100%;
+  max-width: calc(#{$wrap-width} / 2);
+  padding-left: 20px;
+  padding-right: 20px;
+
+  &.half-wrap-right {
+    margin-right: auto;
+  }
+  &.half-wrap-left {
+    margin-left: auto;
+  }
 }
