--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -38,13 +38,11 @@ button {
 
   &:before {
     content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+    @include center-align(absolute);
     background-color: $primary;
     border-radius: 24px;
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
     z-index: 1;
   }
 
