--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -1,3 +1,7 @@
+/*=============================================>>>>>
+= Button Styles =
+===============================================>>>>>*/
+
 button {
   &:hover {
     cursor: pointer;
