Progress dots implemented

--- a/src/components/Donations/DonationSuccess.scss
+++ b/src/components/Donations/DonationSuccess.scss
@@ -1,6 +1,7 @@
 .donation-success {
   display: flex;
   flex-direction: column;
+  margin-bottom: 80px;
 
   .donation-success-message {
     width: 100%;
