--- a/src/sass/global/_common.scss
+++ b/src/sass/global/_common.scss
@@ -38,4 +38,12 @@ main {
 
 .page-block {
   margin-bottom: 200px;
+
+  .block-title {
+    @include h1();
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 70px;
+  }
 }
