--- a/src/components/Slices/ImageTextBlocks.scss
+++ b/src/components/Slices/ImageTextBlocks.scss
@@ -10,6 +10,7 @@
 
   .col {
     width: 50%;
+    flex-grow: 0;
 
     @include media-down(mobile) {
       width: 100%;
@@ -17,28 +18,75 @@
   }
 
   .image-col {
-    .image-container {
+
+    .container {
       width: 100%;
-      padding-bottom: 60%;
+      padding-bottom: 90%;
       position: relative;
+      transform-style: preserve-3d;
+
+
+      .colourful-background {
+        @include center-align(absolute);
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        transform-origin: 0 0;
+        transform-style: preserve-3d;
+
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .image-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 80%;
+        padding-bottom: 50%;
+        z-index: 2;
+        transform-origin: 0 0;
+        transform-style: preserve-3d;
+      }
     }
   }
 
   .text-col {
     display: flex;
     flex-direction: column;
-
   }
 
   &:nth-child(odd) {
+    // first
     flex-direction: row;
+
+    .container {
+      .image-container {
+        transform: rotateX(0deg) rotateY(-10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%) translateZ(20px);
+      }
+      .colourful-background {
+        transform: rotateX(0deg) rotateY(-10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%) translateZ(20px);
+      }
+    }
 
     @include media-down(mobile) {
       flex-direction: column;
     }
   }
   &:nth-child(even) {
+    // second
     flex-direction: row-reverse;
+
+    .container {
+      .image-container {
+        transform: rotateX(0deg) rotateY(10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%);
+      }
+      .colourful-background {
+        transform: rotateX(0deg) rotateY(10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%);
+      }
+    }
 
     @include media-down(mobile) {
       flex-direction: column;
