--- a/src/components/Slices/ImageTextBlocks.scss
+++ b/src/components/Slices/ImageTextBlocks.scss
@@ -18,6 +18,7 @@
   }
 
   .image-col {
+    padding: 20px;
 
     .container {
       width: 100%;
@@ -32,11 +33,20 @@
         height: 100%;
         z-index: 1;
         transform-origin: 0 0;
-        transform-style: preserve-3d;
 
         svg {
           width: 100%;
           height: 100%;
+
+          .background-fill {
+            transform: translateZ(-20px);
+            transform-origin: 0 0;
+          }
+
+          .petal {
+            transform: translateZ(50px);
+            transform-origin: 0 0;
+          }
         }
       }
 
@@ -48,7 +58,6 @@
         padding-bottom: 50%;
         z-index: 2;
         transform-origin: 0 0;
-        transform-style: preserve-3d;
       }
     }
   }
@@ -56,40 +65,84 @@
   .text-col {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+
+    .container {
+      max-width: 450px;
+    }
+
+    .count {
+      display: block;
+      @include h4();
+      text-align: left;
+      margin-bottom: 40px;
+    }
+
+    .title {
+      @include h2();
+      margin-bottom: 50px;
+    }
+
+    .description {
+      @include p1();
+      margin-bottom: 50px;
+    }
+
+    .cta-button {
+      display: inline-block;
+    }
   }
 
   &:nth-child(odd) {
     // first
     flex-direction: row;
 
-    .container {
-      .image-container {
-        transform: rotateX(0deg) rotateY(-10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%) translateZ(20px);
-      }
-      .colourful-background {
-        transform: rotateX(0deg) rotateY(-10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%) translateZ(20px);
+    @include media-down(mobile) {
+      flex-direction: column;
+    }
+
+    .image-col {
+      .container {
+        .image-container {
+          transform: rotateX(0deg) rotateY(-10deg) translateX(-50%) translateY(-50%) translateZ(50px);
+        }
+        .colourful-background {
+          transform: rotateX(0deg) rotateY(-10deg) translateX(-50%) translateY(-50%);
+        }
       }
     }
 
-    @include media-down(mobile) {
-      flex-direction: column;
+    .text-col {
+      padding-right: 50px;
+      @include media-down(mobile) {
+        padding-right: 0;
+      }
     }
   }
   &:nth-child(even) {
     // second
     flex-direction: row-reverse;
 
-    .container {
-      .image-container {
-        transform: rotateX(0deg) rotateY(10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%);
-      }
-      .colourful-background {
-        transform: rotateX(0deg) rotateY(10deg) scale3d(1, 1, 1) translateX(-50%) translateY(-50%);
+    @include media-down(mobile) {
+      flex-direction: column;
+    }
+
+    .image-col {
+      .container {
+        .image-container {
+          transform: rotateY(10deg) translateX(-50%) translateY(-50%) translateZ(20px);
+        }
+        .colourful-background {
+          transform: rotateY(10deg) translateX(-50%) translateY(-50%) scale3d(1, 1, 1);
+        }
       }
     }
 
-    @include media-down(mobile) {
-      flex-direction: column;
+    .text-col {
+      padding-left: 50px;
+      @include media-down(mobile) {
+        padding-left: 0;
+      }
     }
   }
 }
