--- a/src/components/Slices/SubscribeBlock.scss
+++ b/src/components/Slices/SubscribeBlock.scss
@@ -1,76 +1,55 @@
 .subscribe-form-block {
 
   .form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     &.submit-success {
-      .inner-container {
-        justify-content: center;
-        align-items: center;
-
-        .title {
-        }
-
-        .subtitle {
-          margin-bottom: 40px;
-        }
-      }
+      justify-content: center;
+      align-items: center;
     }
 
-    .inner-container {
+    form {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
+      align-items: center;
+      position: relative;
 
-      .title {
-        display: block;
-      }
-
-      .subtitle {
-        display: block;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+      .field {
         position: relative;
+        margin-bottom: 0;
+        margin-right: 20px;
+      }
 
-        .field {
-          position: relative;
-          margin-bottom: 0;
-          padding-bottom: 20px;
-        }
+      .submit-button {
 
-        .submit-button {
+      }
 
-        }
-
-        &.has-error {
-          .error-message {
-            opacity: 1;
-            transform: translateY(0);
-          }
-        }
-
+      &.has-error {
         .error-message {
-          position: absolute;
-          top: auto;
-          left: 0;
-          bottom: -5px;
-          opacity: 0;
-          transition: opacity 0.3s ease, transform 0.3s ease;
-          transform: translateY(-10px);
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
 
-          @include media-down(mobile) {
-            bottom: -15px;
-          }
+      .error-message {
+        @include horizontal-align(absolute);
+        bottom: -5px;
+        opacity: 0;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        transform: translateY(-10px);
 
-          span {
-            display: block;
-            @include p1();
-            text-align: left;
-            color: $error;
-          }
+        @include media-down(mobile) {
+          bottom: -15px;
+        }
+
+        span {
+          display: block;
+          @include p1();
+          text-align: left;
+          color: $error;
         }
       }
     }
