--- a/src/components/Slices/SubscribeBlock.scss
+++ b/src/components/Slices/SubscribeBlock.scss
@@ -8,9 +8,15 @@
     &.submit-success {
       justify-content: center;
       align-items: center;
+
+      p {
+        @include h4();
+      }
     }
 
     form {
+      max-width: 850px;
+      margin: 0 auto;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -18,6 +24,7 @@
       position: relative;
 
       .field {
+        flex: 1;
         position: relative;
         margin-bottom: 0;
         margin-right: 20px;
@@ -30,16 +37,17 @@
       &.has-error {
         .error-message {
           opacity: 1;
-          transform: translateY(0);
+          transform: translateX(-50%) translateY(100%);
         }
       }
 
       .error-message {
         @include horizontal-align(absolute);
-        bottom: -5px;
+        width: 100%;
+        bottom: -20px;
         opacity: 0;
         transition: opacity 0.3s ease, transform 0.3s ease;
-        transform: translateY(-10px);
+        transform: translateX(-50%) translateY(0%);
 
         @include media-down(mobile) {
           bottom: -15px;
@@ -48,7 +56,7 @@
         span {
           display: block;
           @include p1();
-          text-align: left;
+          text-align: center;
           color: $error;
         }
       }
