--- a/src/sass/global/_forms.scss
+++ b/src/sass/global/_forms.scss
@@ -5,11 +5,6 @@ form {
 
   label.field {
     display: block;
-    margin-bottom: 30px;
-
-    @include media-down(mobile) {
-      margin-bottom: 10px;
-    }
 
     &.half-width {
       width: calc(50% - 15px);
@@ -37,11 +32,26 @@ form {
     }
 
     input, textarea {
+      width: 100%;
+      @include h4();
+      padding: 10px 20px;
+      border-width: 3px;
+      border-style: solid;
+      background-color: $tertiary;
+      border-color: $tertiary;
+      border-radius: 16px;
+      transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+      text-align: left;
+      box-sizing: border-box;
 
+      &:active, &:focus {
+        border-color: $primary;
+        outline: none;
+      }
     }
 
     input {
-      
+
     }
 
     textarea {
@@ -59,7 +69,7 @@ form {
     select:-webkit-autofill:hover,
     select:-webkit-autofill:focus {
       border: none;
-      -webkit-text-fill-color: $white;
+      -webkit-text-fill-color: $off-black;
       -webkit-box-shadow: 0 0 0px 1000px transparent inset;
       transition: background-color 5000s ease-in-out 0s;
     }
