--- a/src/components/common/Logo.scss
+++ b/src/components/common/Logo.scss
@@ -6,6 +6,15 @@
   svg {
     width: 100px;
     height: 80px;
+
+    path {
+      fill: $secondary;
+      transition: fill 0.3s ease;
+
+      &.highlight {
+        fill: $primary;
+      }
+    }
   }
 
   &.large {
@@ -27,14 +36,6 @@
         height: 35px;
       }
     }
-  }
-
-  &.white {
-    fill: $white;
-  }
-
-  &.black {
-    fill: $black;
   }
 
   &:active, &:focus {
