NavigationMenu styled up

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -2,7 +2,8 @@
 = Brand colours =
 ===============================================>>>>>*/
 $primary: #03A678;
-$secondary: #26C281;
+$secondary: rgb(38, 194, 129);
+// $secondary: #00C57B;
 $tertiary: #E8F4EF;
 $highlight: #542537;
 $primary-darker: darken($primary, 5%);
