--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -2,6 +2,134 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: $primary;
-  z-index: 3;
+  background-color: $secondary;
+  z-index: 2;
+
+  .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+    position: relative;
+
+    .wrapper {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      max-width: 1040px;
+      position: relative;
+      z-index: 2;
+
+      .menu-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .navigation {
+          display: block;
+          width: 100%;
+
+          .nav-items {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .nav-item {
+              max-width: 250px;
+              display: flex;
+              flex-direction: column;
+              margin-right: 50px;
+
+              &:last-child {
+                margin-right: 0;
+              }
+
+              .audience {
+                @include h4($dark-font: false);
+                text-align: left;
+                margin-bottom: 30px;
+              }
+              .nav-link {
+                display: block;
+                @include h2($dark-font: false);
+                margin-bottom: 30px;
+
+                span {
+                  position: relative;
+
+                  &:after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: auto;
+                    bottom: -5px;
+                    width: 20%;
+                    height: 3px;
+                    background-color: $white;
+                    border-radius: 2px;
+                    transition: width 0.3s ease-out;
+                  }
+                }
+
+                &:hover {
+                  span {
+                    &:after {
+                      width: 100%;
+                      transition: width 0.3s ease-out;
+                    }
+                  }
+                }
+              }
+              .description {
+                @include p1($dark-font: false);
+              }
+            }
+          }
+        }
+
+        .row-item {
+          display: flex;
+          flex-direction: column;
+
+          .label {
+            @include h4($dark-font: false);
+            text-align: left;
+            margin-bottom: 30px;
+          }
+
+          .email {
+            @include h3($dark-font: false);
+          }
+
+          .social-links {
+            min-width: 250px;
+            display: flex;
+            flex-direction: row;
+
+            li {
+              margin-right: 30px;
+
+              &:last-child {
+                margin-right: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .background-leaves {
+      @include center-align(absolute);
+      width: 90%;
+      height: 90%;
+      z-index: 1;
+
+      svg {
+        path {
+          fill: $primary;
+        }
+      }
+    }
+  }
 }
