--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -4,6 +4,12 @@
   height: 100vh;
   background-color: $secondary;
   z-index: 2;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-out;
+
+  &.nav-open {
+    transform: translateX(0);
+  }
 
   .container {
     height: 100%;
