--- a/src/components/Layout/Header.scss
+++ b/src/components/Layout/Header.scss
@@ -2,33 +2,34 @@ header.header {
   position: sticky;
   top: 0;
   left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
-  .wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  .logo {
+    margin: 40px;
+  }
 
-    .toggle-nav-button {
-      width: 40px;
+  .toggle-nav-button {
+    width: 40px;
+    height: 30px;
+    margin: 40px;
+    box-sizing: content-box;
+    position: relative;
+
+    .hamburger-icon {
+      top: 0;
+      @include horizontal-align(absolute);
+      width: 38px;
+      height: 26px;
+    }
+
+    .close-icon {
+      top: 0;
+      @include horizontal-align(absolute);
+      width: 30px;
       height: 30px;
-      margin: 20px;
-      box-sizing: content-box;
-      position: relative;
-
-      .hamburger-icon {
-        top: 0;
-        @include horizontal-align(absolute);
-        width: 38px;
-        height: 26px;
-      }
-
-      .close-icon {
-        top: 0;
-        @include horizontal-align(absolute);
-        width: 30px;
-        height: 30px;
-      }
     }
   }
 }
