--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -1,14 +1,17 @@
 .navigation-menu {
-  position: absolute;
+  top: 0;
+  left: 0;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: $secondary;
-  z-index: 2;
-  transform: translateX(100%);
-  transition: transform 0.3s ease-out;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
 
   &.nav-open {
-    transform: translateX(0);
+    opacity: 1;
+    z-index: 2;
   }
 
   .container {
