--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -10,9 +10,11 @@ $primary-darker: darken($primary, 5%);
 $secondary-darker: darken($secondary, 5%);
 
 /*=============================================>>>>>
-= Additional =
+= Earthy Browns =
 ===============================================>>>>>*/
-$border: #D8E5EE;
+
+$earth: #5B4A2F; // top soil baby!
+$earth-darker: #3F321D;
 
 /*=============================================>>>>>
 = Black/white =
