--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -18,7 +18,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 10%;
+    padding: 120px 0px 20px;
     position: relative;
 
     .wrapper {
@@ -35,6 +35,17 @@
         flex-direction: row;
         justify-content: space-between;
 
+        &.nav-row {
+          @include media-down(mobile) {
+            flex: 1;
+          }
+        }
+
+        @include media-down(mobile) {
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+
         .navigation {
           display: block;
           width: 100%;
@@ -43,6 +54,11 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+
+            @include media-down(mobile) {
+              flex-direction: column;
+              justify-content: flex-start;
+            }
 
             .nav-item {
               max-width: 250px;
@@ -58,6 +74,10 @@
                 @include h4($dark-font: false);
                 text-align: left;
                 margin-bottom: 30px;
+
+                @include media-down(mobile) {
+                  margin-bottom: 5px;
+                }
               }
               .nav-link {
                 display: block;
@@ -78,6 +98,10 @@
                     background-color: $white;
                     border-radius: 2px;
                     transition: width 0.3s ease-out;
+
+                    @include media-down(mobile) {
+                      display: none;
+                    }
                   }
                 }
 
@@ -92,6 +116,10 @@
               }
               .description {
                 @include p1($dark-font: false);
+
+                @include media-down(mobile) {
+                  display: none;
+                }
               }
             }
           }
@@ -100,11 +128,25 @@
         .row-item {
           display: flex;
           flex-direction: column;
+          margin-bottom: 30px;
+
+          &.social-links-item {
+            @include media-down(mobile) {
+              flex-direction: row;
+              align-items: center;
+              justify-content: space-between;
+            }
+          }
 
           .label {
+            display: block;
             @include h4($dark-font: false);
             text-align: left;
             margin-bottom: 30px;
+
+            @include media-down(mobile) {
+              margin-bottom: 5px;
+            }
           }
 
           .email {
@@ -116,8 +158,17 @@
             display: flex;
             flex-direction: row;
 
+            @include media-down(mobile) {
+              min-width: 0;
+              padding: 0 10px;
+            }
+
             li {
               margin-right: 30px;
+
+              @include media-down(mobile) {
+                margin-right: 20px;
+              }
 
               &:last-child {
                 margin-right: 0;
