--- a/src/components/Donations/Tiles.scss
+++ b/src/components/Donations/Tiles.scss
@@ -8,4 +8,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  @include media-down(mobile) {
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
 }
