--- a/src/components/Donations/DonationModal.scss
+++ b/src/components/Donations/DonationModal.scss
@@ -59,12 +59,12 @@
 
   .donation-options {
     display: block;
-    height: 430px;
+    // height: 430px;
     position: relative;
     margin-bottom: 80px;
 
     @include media-down(mobile) {
-      height: 500px;
+      // height: 500px;
       margin-bottom: 60px;
     }
   }
