--- a/src/sass/global/_common.scss
+++ b/src/sass/global/_common.scss
@@ -53,11 +53,19 @@ main {
 .page-block {
   margin-bottom: 200px;
 
+  @include media-down(mobile) {
+    margin-bottom: 140px;
+  }
+
   .block-title {
     @include h1();
     text-align: center;
     max-width: 800px;
     margin: 0 auto;
     margin-bottom: 70px;
+
+    @include media-down(mobile) {
+      margin-bottom: 50px;
+    }
   }
 }
