--- a/src/components/common/Logo.scss
+++ b/src/components/common/Logo.scss
@@ -8,6 +8,11 @@
       width: 145px;
       height: 70px;
 
+      @include media-down(mobile) {
+        width: 100px;
+        height: 50px;
+      }
+
       path {
         fill: $white;
       }
