--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -32,6 +32,10 @@
     border-radius: 24px;
     transition: transform 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
     transform: translateX(0) translateY(0);
+
+    @include media-down(mobile) {
+      padding: 15px 10px 25px;
+    }
   }
 
   &:before {
