PageHero implemented and styled

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -1,4 +1,10 @@
 /*=============================================>>>>>
+= Values =
+===============================================>>>>>*/
+$header-height: 145px;
+$header-height-mobile: 85px;
+
+/*=============================================>>>>>
 = Brand colours =
 ===============================================>>>>>*/
 $primary: #03A678;
