Fixes for errant lines between curves

--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -16,6 +16,10 @@ footer.footer {
     }
   }
 
+  .top-layer {
+    background: linear-gradient(180deg, transparent 70%, $earth 70%);
+  }
+
   .middle-layer {
     background-color: $earth;
   }
