--- a/src/components/Slices/ExplanationBlocks.scss
+++ b/src/components/Slices/ExplanationBlocks.scss
@@ -1,5 +1,40 @@
 .explanation-blocks {
 
+  &.scroll {
+    ::-webkit-scrollbar {
+      width:  75px;
+      height: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: $primary;
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: $tertiary;
+      border-radius: 10px;
+    }
+
+    // For Internet Explorer
+    body {
+      scrollbar-face-color: $tertiary;
+      scrollbar-track-color: $primary;
+    }
+
+    .blocks {
+      .block {
+        flex-shrink: 0;
+        width: calc((100% / 3) - 60px);
+        margin-right: 30px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
   .wrapper {
     max-width: 1152px;
   }
@@ -11,8 +46,13 @@
   .blocks {
     display: flex;
     flex-direction: row;
+    overflow-x: scroll;
+    padding-bottom: 40px;
 
     .block {
+      display: flex;
+      flex-direction: column;
+      width: calc(100% / 3);
       margin-right: 30px;
 
       &:last-child {
@@ -48,6 +88,7 @@
       }
 
       .text-container {
+        flex: 1;
         border: 3px solid $tertiary;
         border-radius: 16px;
         padding: 40px 25px 60px;
