--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -125,3 +125,28 @@
     *zoom:1;
   }
 }
+
+/*=============================================>>>>>
+= Scrollbars =
+===============================================>>>>>*/
+
+@mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white, 50%)) {
+  ::-webkit-scrollbar {
+      width:  $size;
+      height: $size;
+  }
+
+  ::-webkit-scrollbar-thumb {
+      background: $foreground-color;
+  }
+
+  ::-webkit-scrollbar-track {
+      background: $background-color;
+  }
+
+  // For Internet Explorer
+  body {
+    scrollbar-face-color: $foreground-color;
+    scrollbar-track-color: $background-color;
+  }
+}
