--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -124,7 +124,8 @@ footer.footer {
           @include h4($dark-font: false);
           text-align: left;
 
-          a {
+          .studio {
+            display: block;
             @include h4($dark-font: false);
             margin-left: 5px;
           }
