--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -120,6 +120,11 @@ footer.footer {
         }
 
         .signature {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          width: 100%;
           margin-top: 30px;
           @include h4($dark-font: false);
           text-align: left;
