--- a/src/components/Slices/PartnerShowcase.scss
+++ b/src/components/Slices/PartnerShowcase.scss
@@ -20,14 +20,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-bottom: -60px;
 
     .partner {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      width: calc((100% / 3) - 10%);
-      margin-right: 15%;
-      padding-bottom: 10%;
+      width: calc((100% / 3) - 40px);
+      margin-right: 60px;
+      margin-bottom: 60px;
 
       &:nth-child(3n) {
         margin-right: 0;
