Added conditional rendering for business vs farm enquiry

--- a/src/components/Forms/ContactForm.scss
+++ b/src/components/Forms/ContactForm.scss
@@ -1,3 +1,13 @@
 .contact-form {
-  
+  // background-color: black;
+
+
+
+  .form-actions {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 60px;
+  }
 }
