Fix up page structure

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,7 +1,10 @@
-.donation-block {
-  padding-top: calc(#{$header-height} + 100px);
+.home {
 
-  @include media-down(mobile) {
-    padding-top: calc(#{$header-height-mobile} + 50px);
+  .temp-block {
+    padding-top: calc(#{$header-height} + 100px);
+
+    @include media-down(mobile) {
+      padding-top: calc(#{$header-height-mobile} + 50px);
+    }
   }
 }
