--- a/src/components/PageHero.scss
+++ b/src/components/PageHero.scss
@@ -1,9 +1,14 @@
 .page-hero {
   position: relative;
+  overflow: hidden;
 
   .top {
     background-color: $tertiary;
     padding: 190px 0 150px;
+
+    @include media-down(mobile) {
+      padding: 130px 0 100px;
+    }
   }
 
   .title, .subtitle {
@@ -24,9 +29,10 @@
   }
 
   .bottom-curve {
-    background: linear-gradient(180deg, $tertiary 5%, transparent 5%);
+    background: linear-gradient(180deg, $tertiary 5%, white 5%);
     padding-bottom: 6%;
     position: relative;
+    // z-index: 3;
 
     svg {
       position: absolute;
@@ -34,6 +40,7 @@
       left: 0;
       width: 100%;
       height: 100%;
+      // z-index: 3;
     }
   }
 
@@ -45,6 +52,11 @@
     svg {
       height: 100%;
       width: 100%;
+    }
+
+    @include media-down(mobile) {
+      height: 100%;
+      width: 95%;
     }
   }
 }
