--- a/src/components/ProgressDots.scss
+++ b/src/components/ProgressDots.scss
@@ -11,6 +11,12 @@
     border: 3px solid $tertiary;
     margin-right: 50px;
 
+    @include media-down(mobile) {
+      width: 12px;
+      height: 12px;
+      margin-right: 30px;
+    }
+
     &:last-child {
       margin-right: 0;
     }
