--- a/src/components/Slices/PartnerShowcase.scss
+++ b/src/components/Slices/PartnerShowcase.scss
@@ -2,11 +2,19 @@
 
   .wrapper {
     max-width: 1152px;
+
+    @include media-down(mobile) {
+      padding: 0;
+    }
   }
 
-  .title {
+  .block-title {
     @include h1();
     text-align: center;
+
+    @include media-down(mobile) {
+      margin-bottom: 20px;
+    }
   }
 
   .subtitle {
@@ -14,13 +22,28 @@
     text-align: center;
     max-width: 650px;
     margin: 0 auto 60px;
+
+    @include media-down(mobile) {
+      margin-bottom: 30px;
+    }
   }
 
   .partners {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     margin-bottom: -60px;
+
+    @include media-down(mobile) {
+      margin-bottom: 0;
+    }
+
+    .slider {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      @include media-down(mobile) {
+        display: block;
+      }
+    }
 
     .partner {
       display: flex;
@@ -30,21 +53,41 @@
       margin-right: 60px;
       margin-bottom: 60px;
 
+      @include media-down(mobile) {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 0;
+      }
+
       &:nth-child(3n) {
         margin-right: 0;
       }
 
       .image-container {
-        width: 100%;
+        width: 80%;
         padding-bottom: 80%;
         position: relative;
         margin-bottom: 20px;
+
+        @include media-down(mobile) {
+          padding-bottom: 0;
+          width: 100%;
+          height: 70vw;
+          max-width: 400px;
+          max-height: 400px;
+          margin: 0 auto 20px;
+        }
 
         .colourful-background {
           @include center-align(absolute);
           width: 100%;
           height: 100%;
           z-index: 1;
+
+          @include media-down(mobile) {
+            width: calc(100% - 40px);
+            height: calc(100% - 40px);
+          }
 
           svg {
             width: 100%;
@@ -101,6 +144,13 @@
           }
         }
       }
+    }
+
+    .progress-dots {
+      @include media-up(mobile) {
+        display: none;
+      }
+      margin-top: 40px;
     }
   }
 }
