--- a/src/sass/global/_forms.scss
+++ b/src/sass/global/_forms.scss
@@ -41,7 +41,7 @@ form {
 
     input, textarea {
       width: 100%;
-      @include h4();
+      @include h3();
       padding: 25px 20px;
       border-width: 3px;
       border-style: solid;
@@ -52,8 +52,14 @@ form {
       text-align: left;
       box-sizing: border-box;
 
+      @include media-down(mobile) {
+        padding: 10px 15px;
+        border-radius: 10px;
+      }
+
       &:active, &:focus {
-        border-color: $primary;
+        color: $secondary;
+        border-color: $secondary;
         outline: none;
       }
     }
@@ -76,7 +82,6 @@ form {
     select:-webkit-autofill,
     select:-webkit-autofill:hover,
     select:-webkit-autofill:focus {
-      border: none;
       -webkit-text-fill-color: $off-black;
       -webkit-box-shadow: 0 0 0px 1000px transparent inset;
       transition: background-color 5000s ease-in-out 0s;
