Touched up navigation menu

--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -18,15 +18,17 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 120px 0px 20px;
+    justify-content: center;
+    padding: calc(#{$header-height} + 20px) 0px 20px;
     position: relative;
 
     .wrapper {
       flex: 1;
+      max-width: 1040px;
+      max-height: 600px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      max-width: 1040px;
       position: relative;
       z-index: 2;
 
