--- a/src/components/PageHero.scss
+++ b/src/components/PageHero.scss
@@ -26,6 +26,12 @@
   .subtitle {
     @include h3();
     max-width: 650px;
+    margin-bottom: 60px;
+  }
+
+  .anchor-to-button {
+    display: block;
+    margin: 0 auto;
   }
 
   .bottom-curve {
