--- a/src/components/Slices/ExplanationBlocks.scss
+++ b/src/components/Slices/ExplanationBlocks.scss
@@ -14,6 +14,7 @@
     ::-webkit-scrollbar-track {
       background: $tertiary;
       border-radius: 10px;
+      margin: 0 10px;
     }
 
     // For Internet Explorer
@@ -29,7 +30,9 @@
         margin-right: 30px;
 
         @include media-down(mobile) {
-          width: calc(90% - 30px);
+          width: 85%;
+          padding: 0 20px;
+          margin-right: 0;
         }
 
         &:last-child {
@@ -41,6 +44,10 @@
 
   .wrapper {
     max-width: 1152px;
+
+    @include media-down(mobile) {
+      padding: 0;
+    }
   }
 
   .title {
