--- a/src/sass/global/_forms.scss
+++ b/src/sass/global/_forms.scss
@@ -51,6 +51,7 @@ form {
       transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
       text-align: left;
       box-sizing: border-box;
+      box-shadow: none;
 
       @include media-down(mobile) {
         padding: 10px 15px;
