--- a/src/components/Slices/PartnerShowcase.scss
+++ b/src/components/Slices/PartnerShowcase.scss
@@ -55,8 +55,8 @@
 
       @include media-down(mobile) {
         width: 100%;
-        margin-right: 0;
-        margin-bottom: 0;
+        margin: 0;
+        padding: 0 15px;
       }
 
       &:nth-child(3n) {
@@ -67,12 +67,13 @@
         width: 80%;
         padding-bottom: 80%;
         position: relative;
+        margin: 0 auto;
         margin-bottom: 20px;
 
         @include media-down(mobile) {
           padding-bottom: 0;
           width: 100%;
-          height: 70vw;
+          height: 65vw;
           max-width: 400px;
           max-height: 400px;
           margin: 0 auto 20px;
@@ -85,8 +86,8 @@
           z-index: 1;
 
           @include media-down(mobile) {
-            width: calc(100% - 40px);
-            height: calc(100% - 40px);
+            width: 100%;
+            height: 100%;
           }
 
           svg {
@@ -113,7 +114,6 @@
           flex-direction: row;
           align-items: center;
           justify-content: center;
-          margin-left: -16px;
         }
 
         .link-icon {
@@ -121,7 +121,7 @@
           width: 16px;
           height: 16px;
           margin-top: -1px;
-          margin-right: 10px;
+          margin-right: 15px;
 
           svg {
             width: 100%;
@@ -131,12 +131,20 @@
 
         span {
           @include h4();
-          // white-space: nowrap;
+          white-space: nowrap;
           text-align: center;
           transition: color 0.3s ease;
+
+          @include media-down(mobile) {
+            font-size: 14px;
+          }
         }
+      }
 
-
+      a {
+        .name-container {
+          margin-left: -31px;
+        }
 
         &:hover {
           span {
