--- a/src/components/Donations/VariableDonationTile.scss
+++ b/src/components/Donations/VariableDonationTile.scss
@@ -1,6 +1,6 @@
 .variable-donation-tile {
 
-  .container {
+  .button-container {
 
     .amount-container {
 
@@ -14,8 +14,6 @@
 
           input[type='number'] {
             display: block;
-            -moz-appearance:none;
-            -webkit-appearance: none;
             border: none;
             background-color: transparent;
             outline: none;
@@ -25,6 +23,7 @@
             text-align: center;
             padding: 0;
             line-height: 1;
+            border-radius: none;
             border-bottom: 2px solid $tertiary;
             transition: border-color 0.3s ease;
             &:-ms-clear {
@@ -39,14 +38,8 @@
               border-color: $primary;
             }
           }
-
-          input::-webkit-outer-spin-button,
-          input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-          }
         }
       }
     }
   }
-
 }
