Styling up LegalPageNavigation

--- a/src/components/Legal/LegalPageBody.scss
+++ b/src/components/Legal/LegalPageBody.scss
@@ -1,7 +1,10 @@
 .legal-page-body {
+  padding: 120px 0;
+
   .wrapper {
     display: flex;
     flex-direction: row;
+    position: relative;
 
     .col {
 
