--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -79,7 +79,7 @@ $font-weight-black: 900;
   font-size: 14px;
   line-height: 1.5em;
   letter-spacing: 2px;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   font-weight: $font-weight-bold;
 
