--- a/src/components/Legal/LegalPageNavigation.scss
+++ b/src/components/Legal/LegalPageNavigation.scss
@@ -17,9 +17,16 @@
         display: flex;
         flex-direction: row;
 
+        &.active {
+          span {
+            color: $primary;
+          }
+        }
+
         span {
           display: block;
           @include h4();
+          transition: color 0.3s ease;
 
           &.count {
             margin-right: 10px;
