--- a/src/components/Legal/LegalPageBody.scss
+++ b/src/components/Legal/LegalPageBody.scss
@@ -6,16 +6,32 @@
     flex-direction: row;
     position: relative;
 
+    @include media-down(mobile) {
+      flex-direction: column;
+      padding: 0;
+    }
+
     .col {
 
       &.col-left {
         width: 300px;
         margin-right: 30px;
+
+        @include media-down(mobile) {
+          width: 100%;
+          margin-right: 0;
+        }
       }
 
       &.col-right {
         flex: 1;
         margin-left: 30px;
+
+        @include media-down(mobile) {
+          width: 100%;
+          margin-left: 0;
+          padding: 0 20px;
+        }
       }
     }
   }
