More work on LegalPageNavigation

--- a/src/components/Layout/Header.scss
+++ b/src/components/Layout/Header.scss
@@ -6,10 +6,17 @@ header.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   transform: translateY(0);
-  transition: transform 0.5s ease, padding 0.3s ease;
+  transition: transform 0.5s ease;
   z-index: 3;
+
+  &.solid-background {
+    @include media-down(mobile) {
+      background-color: transparent;
+      box-shadow: none;
+      transition: transform 0.5s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+  }
 
   &.headroom--not-top {
     transform: translateY(-100%);
@@ -19,7 +26,11 @@ header.header {
       &:after {
         transform: scaleX(1);
         transform-origin: left;
-        transition: transform 0.3s ease 0.3s;
+        transition: transform 0.3s ease 0.3s, background-color 0.3s ease, box-shadow 0.3s ease;
+      }
+      &.solid-background {
+        background-color: $white;
+        box-shadow: rgba(33, 38, 44, 0.1) 0px 2px 4px 0px;
       }
     }
   }
