--- a/src/components/Legal/LegalPageNavigation.scss
+++ b/src/components/Legal/LegalPageNavigation.scss
@@ -1,21 +1,68 @@
 .legal-page-navigation {
+  display: block;
   position: sticky;
   top: $header-height;
   padding: 20px 0;
   left: 0;
+  z-index: 33;
 
   @include media-down(mobile) {
-    display: none;
-    position: fixed;
-    top: $header-height-mobile;
+    position: sticky;
+    top: 0px;
+    left: 0px;
     width: 100%;
     padding: 0 20px;
-    background-color: $tertiary;
+    background-color: $primary;
+  }
+
+  .navigation-container {
+    @include media-down(mobile) {
+      position: relative;
+    }
+  }
+
+  .mobile-section-selector {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+
+    span {
+      display: block;
+      @include h4();
+      color: $white;
+      text-align: center;
+    }
+
+    .icon {
+      margin-left: 15px;
+      height: 12px;
+      width: 10px;
+      position: relative;
+
+      svg {
+        @include center-align(absolute);
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .nav-items {
     display: flex;
     flex-direction: column;
+
+    @include media-down(mobile) {
+      position: absolute;
+      background-color: #f0f3f2;
+      padding: 5rem 2rem;
+      text-align: center;
+      transition: visibility .2s,opacity .2s ease-out;
+      visibility: hidden;
+      opacity: 0;
+    }
 
     .nav-item {
       display: block;
@@ -51,9 +98,10 @@
 
   .reading-progress-bar {
     width: 100%;
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: auto;
     bottom: 0;
+    transform: translateY(100%);
 
     .inner-progress {
       display: block;
