--- a/src/components/Legal/LegalPageBody.scss
+++ b/src/components/Legal/LegalPageBody.scss
@@ -1,6 +1,7 @@
 .legal-page-body {
   padding: 120px 0;
   position: relative;
+  overflow: visible;
 
   @include media-down(mobile) {
     padding: 0 0 80px;
@@ -10,10 +11,12 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    overflow: visible;
 
     @include media-down(mobile) {
-      flex-direction: column;
+      display: block;
       padding: 0;
+      position: static;
     }
 
     .col {
@@ -24,8 +27,10 @@
         margin-right: 30px;
 
         @include media-down(mobile) {
+          position: sticky;
+          top: 0;
           width: 100%;
-          margin-right: 0;
+          z-index: 1;
         }
       }
 
