--- a/src/sass/global/_common.scss
+++ b/src/sass/global/_common.scss
@@ -10,6 +10,7 @@
 body {
   height: 100%;
   position: relative;
+  overflow: visible;
 
   &.nav-open {
     overflow: hidden;
@@ -29,6 +30,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
+  overflow: visible;
 }
 
 .header {
